Add plans page version 1 - layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,71 @@
 
-		<h3>Em construção...</h3>
+<div class="box box-primary">
+  <div class="box-header with-border">
+    <h3 class="box-title">Planos</h3>
+  </div>
+  <div class="box-body">
+
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Plano Básico</h3>
+      </div>
+      <div class="panel-body text-center">
+        <p class="lead" style="font-size:40px"><strong>R$ 100,00 / mês</strong></p>
+      </div>
+      <ul class="list-group list-group-flush text-center">
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> 50 clientes</li>
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> 100 documentos</li>
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> Painel de Controle</li>
+      </ul>
+      <div class="panel-footer">
+        <a class="btn btn-lg btn-block btn-danger" href="#">Assinar</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Plano Intermediário</h3>
+      </div>
+      <div class="panel-body text-center">
+        <p class="lead" style="font-size:40px"><strong>R$ 150,00 / mês</strong></p>
+      </div>
+      <ul class="list-group list-group-flush text-center">
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> 100 clientes</li>
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> 200 documentos</li>
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> Painel de Controle</li>
+      </ul>
+      <div class="panel-footer">
+        <a class="btn btn-lg btn-block btn-danger" href="#">Assinar</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+    <div class="panel panel-warning">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Plano Avançado</h3>
+      </div>
+      <div class="panel-body text-center">
+        <p class="lead" style="font-size:40px"><strong>R$ 200,00 / mês</strong></p>
+      </div>
+      <ul class="list-group list-group-flush text-center">
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> Clientes ilimitados</li>
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> Documentos ilimitados</li>
+        <li class="list-group-item"><i class="icon-ok text-danger"></i> Painel de Controle</li>
+      </ul>
+      <div class="panel-footer">
+        <a class="btn btn-lg btn-block btn-danger" href="#">Assinar</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+</div>
 
 
